--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.93"
 clap = "4.5.20"
-hickory-resolver = "0.25.0-alpha.3"
+hickory-resolver = { version = "0.25.0-alpha.3", features = ["dns-over-quic", "dns-over-tls", "dns-over-rustls", "webpki-roots"] }
 serde = "1.0.215"
 tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
