--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 anyhow = "1.0.93"
 clap = "4.5.21"
 hickory-proto = { version = "0.25.0-alpha.3", features = ["text-parsing"] }
-hickory-resolver = { version = "0.25.0-alpha.3", features = ["dns-over-quic", "dns-over-tls", "dns-over-rustls", "webpki-roots"] }
+hickory-resolver = { version = "0.25.0-alpha.3", features = ["dns-over-quic", "dns-over-tls", "dns-over-rustls", "native-certs", "dns-over-https-rustls", "dns-over-h3"] }
 serde = { version = "1.0.215", features = ["derive"] }
 tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
 tokio-util = "0.7.12"
@@ -23,3 +23,5 @@ thiserror = "2.0.3"
 futures-executor = "0.3.31"
 tracing-subscriber = "0.3.18"
 sd-notify = "0.4.3"
+networkmanager = "0.4.1"
+dbus = "0.9.7"
